# SecureHub-Full-Stack-Monorepo

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml  server.py  start.ps1  start.sh
backend/app/: deps.py  main.py
backend/app/agents/: __init__.py  base.py  planned_skill.py
backend/app/auth/: __init__.py  security.py
backend/app/core/: config.py  lifespan.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/knowledge/: __init__.py  graph.py
backend/app/llm/: __init__.py  base.py  deepseek.py  embedding.py  rate_limiter.py  xfyun.py
backend/app/rag/: __init__.py  chunker.py  evidence_builder.py  reranker.py  retriever.py
backend/app/repositories/: __init__.py  base.py  research_repository.py
backend/app/runtime/: __init__.py  capability_manifest.py  context.py  logger.py  router.py
backend/app/schemas/: agent.py  auth.py  course.py  evidence.py  identity.py  knowledge.py  learning.py  profile.py  rag.py  resource.py
backend/app/services/: __init__.py  research_service.py
backend/app/streaming/: __init__.py  events.py  sse.py
backend/scripts/: seed_smoke.py
backend/tests/: conftest.py  test_auth.py
backend/tests/agents/: test_career_planner_build_persona.py  test_competition_advisor_generate_quiz.py  test_doc_archivist_generate_course_doc.py  test_outcome_evaluator_quality_check.py  test_topic_explorer_generate_lab.py
backend/tests/db/: test_models_crud.py  test_seed_smoke.py
backend/tests/guardrails/: test_prompt_injection.py
backend/tests/runtime/: __init__.py  (+3 more)
(+353 files in other folders)
