[project]
name = "securehub-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for SecureHub."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0",
  "alembic>=1.14.0",
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langgraph>=0.2.0",
  "lxml>=6.1.0",
  "passlib[bcrypt]>=1.7.4",
  "playwright>=1.58.0",
  "pgvector>=0.3.6",
  "pydantic-settings>=2.4.0",
  "python-jose>=3.3.0",
  "pytest>=8.3.0",
  "redis>=5.2.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "tiktoken>=0.8.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=13.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
